tests/paczka1/fuzzy1/34157013.err
Error in line 1: w47AEdMGNx A988 47,0
Error in line 8: zRI A556 57,0
Error in line 13: zRI A101 95,4
Error in line 18: dHcIJ A101 63,4
Error in line 23: dHcIJ S874 41,6
Error in line 21: zRI A556 22,5
